Story #8659 : Update ReadOrder & WriteOrder models
- Add FileBucketId & Size
- Remove ReadRequestId (a read order may belong to multiple access
request)