@@ -27,13 +27,14 @@
 package fr.gouv.vitam.storage.offers.tape.cas;
 
 import fr.gouv.vitam.common.PropertiesUtils;
-import fr.gouv.vitam.common.database.server.query.QueryCriteria;
 import fr.gouv.vitam.common.digest.Digest;
 import fr.gouv.vitam.common.digest.DigestType;
 import fr.gouv.vitam.common.model.MetadatasObject;
 import fr.gouv.vitam.common.storage.ContainerInformation;
 import fr.gouv.vitam.common.storage.cas.container.api.ObjectContent;
 import fr.gouv.vitam.common.storage.cas.container.api.ObjectListingListener;
+import fr.gouv.vitam.storage.engine.common.model.QueueMessageEntity;
+import fr.gouv.vitam.storage.engine.common.model.ReadOrder;
 import fr.gouv.vitam.storage.engine.common.model.TapeArchiveReferentialEntity;
 import fr.gouv.vitam.storage.engine.common.model.TapeCatalog;
 import fr.gouv.vitam.storage.engine.common.model.TapeLibraryObjectReferentialId;
@@ -42,15 +43,11 @@ import fr.gouv.vitam.storage.engine.common.model.TapeLibraryTarObjectStorageLoca
 import fr.gouv.vitam.storage.engine.common.model.TapeObjectReferentialEntity;
 import fr.gouv.vitam.storage.engine.common.model.TapeReadRequestReferentialEntity;
 import fr.gouv.vitam.storage.engine.common.model.TarEntryDescription;
-import fr.gouv.vitam.storage.offers.tape.exception.ArchiveReferentialException;
-import fr.gouv.vitam.storage.offers.tape.exception.ObjectReferentialException;
-import fr.gouv.vitam.storage.offers.tape.exception.ReadRequestReferentialException;
-import fr.gouv.vitam.storage.offers.tape.exception.TapeCatalogException;
 import fr.gouv.vitam.storage.offers.tape.spec.QueueRepository;
 import fr.gouv.vitam.storage.offers.tape.spec.TapeCatalogService;
 import fr.gouv.vitam.workspace.api.exception.ContentAddressableStorageNotFoundException;
-import fr.gouv.vitam.workspace.api.exception.ContentAddressableStorageServerException;
 import org.apache.commons.io.IOUtils;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -62,8 +59,6 @@ import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -83,6 +78,7 @@ import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 public class TapeLibraryContentAddressableStorageTest {
@@ -114,6 +110,9 @@ public class TapeLibraryContentAddressableStorageTest {
     @Mock
     private ArchiveOutputRetentionPolicy archiveOutputRetentionPolicy;
 
+    @Mock
+    private BucketTopologyHelper bucketTopologyHelper;
+
     private BasicFileStorage basicFileStorage;
 
     private TapeLibraryContentAddressableStorage tapeLibraryContentAddressableStorage;
@@ -129,7 +128,13 @@ public class TapeLibraryContentAddressableStorageTest {
         tapeLibraryContentAddressableStorage =
             new TapeLibraryContentAddressableStorage(basicFileStorage, objectReferentialRepository,
                 archiveReferentialRepository, readRequestReferentialRepository, fileBucketTarCreatorManager,
-                readWriteQueueRepository, tapeCatalogService, outputTarsPath, archiveOutputRetentionPolicy);
+                readWriteQueueRepository, tapeCatalogService, outputTarsPath, archiveOutputRetentionPolicy,
+                bucketTopologyHelper);
+    }
+
+    @After
+    public void cleanup() {
+        verifyNoMoreInteractions(bucketTopologyHelper);
     }
 
     @Test
@@ -391,17 +396,12 @@ public class TapeLibraryContentAddressableStorageTest {
         ObjectListingListener objectListingListener = mock(ObjectListingListener.class);
 
         // When / Then
-        assertThatThrownBy(() -> {
-            tapeLibraryContentAddressableStorage.listContainer("container", objectListingListener);
-        })
+        assertThatThrownBy(() -> tapeLibraryContentAddressableStorage.listContainer("container", objectListingListener))
             .isInstanceOf(UnsupportedOperationException.class);
     }
 
     @Test
-    public void createReadOrderOK()
-        throws ObjectReferentialException, IOException, ContentAddressableStorageNotFoundException,
-        ContentAddressableStorageServerException, URISyntaxException, TapeCatalogException,
-        ReadRequestReferentialException, ArchiveReferentialException {
+    public void createReadOrderOK() throws Exception {
         // Given
         String tapeCode = "VIT002L6";
         int fileSize = 6;
@@ -409,7 +409,7 @@ public class TapeLibraryContentAddressableStorageTest {
         TapeLibraryObjectReferentialId objectReferentialId =
             new TapeLibraryObjectReferentialId("0_object", "aeaaaaaaaafklihzablkmallwljiqoiaaaaq");
         TapeLibraryTarObjectStorageLocation tarObjectStorageLocation = new TapeLibraryTarObjectStorageLocation(
-            Arrays.asList(
+            List.of(
                 new TarEntryDescription(
                     tarId,
                     "0_object/aeaaaaaaaaecntv2ab5tmallrz6wdwqaaaaq-aeaaaaaaaaecntv2ab5meallrz6w2eaaaaaq-0",
@@ -431,46 +431,56 @@ public class TapeLibraryContentAddressableStorageTest {
 
         Files.copy(PropertiesUtils.getResourcePath("tar/" + tarId), Paths.get(outputTarsPath + "/" + tarId));
 
-        // When / Then
+        doReturn("test-objects").when(bucketTopologyHelper).getFileBucketFromContainerName("0_object");
+
         TapeCatalog tape = new TapeCatalog();
         tape.setCode(tapeCode);
         tape.setBucket("bucket");
-        ArgumentCaptor<List<QueryCriteria>> captor = ArgumentCaptor.forClass(List.class);
 
-        when(tapeCatalogService.find(captor.capture())).thenReturn(Arrays.asList(tape));
-        when(objectReferentialRepository.find(anyString(), anyString())).thenReturn(objectReferentialEntity);
-        when(archiveReferentialRepository.find(anyString())).thenReturn(tarReferentialEntity);
+        when(tapeCatalogService.find(any())).thenReturn(List.of(tape));
+        when(objectReferentialRepository.find("0_object", "aeaaaaaaaaecntv2ab5tmallrz6wdwqaaaaq"))
+            .thenReturn(objectReferentialEntity);
+        when(archiveReferentialRepository.find(tarId)).thenReturn(tarReferentialEntity);
 
+        // When
         String readOrderId = tapeLibraryContentAddressableStorage
-            .createReadOrderRequest("0_object", Arrays.asList("aeaaaaaaaaecntv2ab5tmallrz6wdwqaaaaq"));
+            .createReadOrderRequest("0_object", List.of("aeaaaaaaaaecntv2ab5tmallrz6wdwqaaaaq"));
+
+        // Then
         assertThat(readOrderId).isNotNull();
 
+        ArgumentCaptor<TapeReadRequestReferentialEntity> readRequestArgumentCaptor =
+            ArgumentCaptor.forClass(TapeReadRequestReferentialEntity.class);
+        verify(readRequestReferentialRepository).insert(readRequestArgumentCaptor.capture());
+
         TapeReadRequestReferentialEntity tapeReadRequestReferentialEntity =
-            mock(TapeReadRequestReferentialEntity.class);
-        when(tapeReadRequestReferentialEntity.isCompleted()).thenReturn(true);
+            readRequestArgumentCaptor.getValue();
+        assertThat(tapeReadRequestReferentialEntity.getRequestId()).isEqualTo(readOrderId);
+        assertThat(tapeReadRequestReferentialEntity.getContainerName()).isEqualTo("0_object");
 
-        when(readRequestReferentialRepository.find(eq(readOrderId)))
-            .thenReturn(Optional.of(tapeReadRequestReferentialEntity));
-        try {
-            Thread.sleep(1000);
-        } catch (InterruptedException e) {
+        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor =
+            ArgumentCaptor.forClass(QueueMessageEntity.class);
+        verify(readWriteQueueRepository).addIfAbsent(any(), queueMessageEntityArgumentCaptor.capture());
 
-        }
+        ReadOrder readOrder = (ReadOrder) queueMessageEntityArgumentCaptor.getValue();
+        assertThat(readOrder.getBucket()).isEqualTo("bucket");
+        assertThat(readOrder.getFileBucketId()).isEqualTo("test-objects");
+        assertThat(readOrder.getSize()).isEqualTo(5120L);
+        assertThat(readOrder.getTapeCode()).isEqualTo(tapeCode);
+        assertThat(readOrder.getFilePosition()).isEqualTo(248);
 
-        assertThat(readRequestReferentialRepository.find(readOrderId).get().isCompleted()).isTrue();
+        verify(bucketTopologyHelper).getFileBucketFromContainerName("0_object");
     }
 
     @Test
-    public void getObjectWith1SegmentsOK() throws ObjectReferentialException, IOException,
-        ContentAddressableStorageNotFoundException, ContentAddressableStorageServerException,
-        ArchiveReferentialException {
+    public void getObjectWith1SegmentsOK() throws Exception {
         // Given
         int fileSize = 6;
         String tarId = "20190625115513038-406fceff-2c4f-475c-898f-493331756eda.tar";
         TapeLibraryObjectReferentialId objectReferentialId =
             new TapeLibraryObjectReferentialId("0_object", "aeaaaaaaaafklihzablkmallwljiqoiaaaaq");
         TapeLibraryTarObjectStorageLocation tarObjectStorageLocation = new TapeLibraryTarObjectStorageLocation(
-            Arrays.asList(
+            List.of(
                 new TarEntryDescription(
                     tarId,
                     "0_object/aeaaaaaaaaecntv2ab5tmallrz6wdwqaaaaq-aeaaaaaaaaecntv2ab5meallrz6w2eaaaaaq-0",
@@ -504,9 +514,7 @@ public class TapeLibraryContentAddressableStorageTest {
     }
 
     @Test
-    public void getObjectWith2SegmentsOK()
-        throws ObjectReferentialException, IOException, ContentAddressableStorageNotFoundException,
-        ContentAddressableStorageServerException, ArchiveReferentialException {
+    public void getObjectWith2SegmentsOK() throws Exception {
         // Given
         int fileSize = 6;
         String tarId = "20190702131434269-84970e20-402d-4a88-b1df-ae05281ec7e6.tar";
