@@ -54,6 +54,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.TemporaryFolder;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
@@ -62,13 +63,12 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyInt;
@@ -76,16 +76,21 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.startsWith;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.when;
 
 public class ReadTaskTest {
+
     public static final String FAKE_LIBRARY = "fakeLibrary";
     public static final String FAKE_TAPE_CODE = "fakeTapeCode";
     public static final Integer SLOT_INDEX = 1;
     public static final Integer DRIVE_INDEX = 0;
     private static final Integer FILE_POSITION = 0;
-    private final String outputDirectory = "/tmp";
+    private static final String FAKE_BUCKET = "fakeBucket";
+    private static final String FAKE_FILE_BUCKET_ID = "fakeFileBucketId";
+    private static final long FILE_SIZE = 1_234_567_890_123L;
+
+    @Rule
+    public TemporaryFolder temporaryFolder = new TemporaryFolder();
 
     @Rule
     public MockitoRule mockitoRule = MockitoJUnit.rule();
@@ -113,14 +118,17 @@ public class ReadTaskTest {
 
     private Path fileTest;
     private String fileName;
+    private File outputDir;
 
     @Before
     public void setUp() throws IOException {
         when(tapeDriveService.getReadWriteService(eq(TapeDriveService.ReadWriteCmd.DD)))
             .thenAnswer(o -> tapeReadWriteService);
 
+        outputDir = temporaryFolder.newFolder("outputTars");
+
         fileName = GUIDFactory.newGUID().getId() + ".tar";
-        when(tapeReadWriteService.getOutputDirectory()).thenReturn(outputDirectory);
+        when(tapeReadWriteService.getOutputDirectory()).thenReturn(outputDir.getAbsolutePath());
     }
 
     @After
@@ -140,42 +148,34 @@ public class ReadTaskTest {
         when(tapeDriveService.getTapeDriveConf()).thenAnswer(o -> mock(TapeDriveConf.class));
 
         // Test constructors
-        try {
-            new ReadTask(null, mock(TapeCatalog.class), mock(TapeLibraryServiceImpl.class),
-                mock(TapeCatalogService.class), mock(ReadRequestReferentialRepository.class),
-                archiveOutputRetentionPolicy);
-            fail("read order is required");
-        } catch (IllegalArgumentException e) {
-        }
+        assertThatThrownBy(() -> new ReadTask(null, mock(TapeCatalog.class), mock(TapeLibraryServiceImpl.class),
+            mock(TapeCatalogService.class), mock(ReadRequestReferentialRepository.class),
+            archiveOutputRetentionPolicy)
+        ).withFailMessage("read order is required")
+            .isInstanceOf(IllegalArgumentException.class);
 
-        try {
-            new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class), null,
-                mock(TapeCatalogService.class), mock(ReadRequestReferentialRepository.class),
-                archiveOutputRetentionPolicy);
-            fail("tape library service is required");
-        } catch (IllegalArgumentException e) {
-        }
+        assertThatThrownBy(() -> new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class), null,
+            mock(TapeCatalogService.class), mock(ReadRequestReferentialRepository.class),
+            archiveOutputRetentionPolicy)
+        ).withFailMessage("tape library service is required")
+            .isInstanceOf(IllegalArgumentException.class);
 
-        try {
-            new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class), mock(TapeLibraryServiceImpl.class),
-                null, mock(ReadRequestReferentialRepository.class), archiveOutputRetentionPolicy);
-            fail("tape catalog service is required");
-        } catch (IllegalArgumentException e) {
-        }
+        assertThatThrownBy(() -> new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class),
+            mock(TapeLibraryServiceImpl.class), null, mock(ReadRequestReferentialRepository.class),
+            archiveOutputRetentionPolicy)
+        ).withFailMessage("tape catalog service is required")
+            .isInstanceOf(IllegalArgumentException.class);
 
-        try {
-            new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class), mock(TapeLibraryServiceImpl.class),
-                mock(TapeCatalogService.class), null, archiveOutputRetentionPolicy);
-            fail("read request repository is required");
-        } catch (IllegalArgumentException e) {
-        }
+        assertThatThrownBy(() -> new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class),
+            mock(TapeLibraryServiceImpl.class), mock(TapeCatalogService.class), null, archiveOutputRetentionPolicy)
+        ).withFailMessage("read request repository is required")
+            .isInstanceOf(IllegalArgumentException.class);
 
-        try {
-            new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class), mock(TapeLibraryServiceImpl.class),
-                mock(TapeCatalogService.class), mock(ReadRequestReferentialRepository.class), null);
-            fail("read request archiveOutputRetentionPolicy is required");
-        } catch (IllegalArgumentException e) {
-        }
+        assertThatThrownBy(() -> new ReadTask(mock(ReadOrder.class), mock(TapeCatalog.class),
+            mock(TapeLibraryServiceImpl.class), mock(TapeCatalogService.class),
+            mock(ReadRequestReferentialRepository.class), null)
+        ).withFailMessage("read request archiveOutputRetentionPolicy is required")
+            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
@@ -188,9 +188,8 @@ public class ReadTaskTest {
             .setCurrentPosition(FILE_POSITION)
             .setCurrentLocation(new TapeLocation(DRIVE_INDEX, TapeLocationType.DRIVE));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, tapeCatalog, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -198,7 +197,7 @@ public class ReadTaskTest {
 
         doAnswer(
             invocationOnMock -> {
-                fileTest = Files.createFile(Paths.get(outputDirectory + File.separator + fileName + ReadTask.TEMP_EXT));
+                fileTest = Files.createFile(outputDir.toPath().resolve(fileName + ReadTask.TEMP_EXT));
                 return new TapeResponse(StatusCode.OK);
             }
         ).when(tapeReadWriteService).readFromTape(any());
@@ -228,8 +227,7 @@ public class ReadTaskTest {
     }
 
     @Test
-    public void testReadTaskWhenCurrentTapeIsNotNullAndNotEligibleAndTheEligibleTapeIsAvailable()
-        throws InterruptedException, QueueException {
+    public void testReadTaskWhenCurrentTapeIsNotNullAndNotEligibleAndTheEligibleTapeIsAvailable() throws Exception {
         // When
         when(tapeDriveService.getTapeDriveConf()).thenAnswer(o -> mock(TapeDriveConf.class));
         TapeCatalog currentTape = new TapeCatalog()
@@ -243,9 +241,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(SLOT_INDEX, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -253,7 +250,7 @@ public class ReadTaskTest {
 
         doAnswer(
             invocationOnMock -> {
-                fileTest = Files.createFile(Paths.get(outputDirectory + File.separator + fileName + ReadTask.TEMP_EXT));
+                fileTest = Files.createFile(outputDir.toPath().resolve(fileName + ReadTask.TEMP_EXT));
                 return new TapeResponse(StatusCode.OK);
             }
         ).when(tapeReadWriteService).readFromTape(any());
@@ -312,9 +309,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(SLOT_INDEX, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -333,7 +329,7 @@ public class ReadTaskTest {
         when(tapeCatalogService.receive(any(), any()))
             .thenReturn(Optional.empty());
         when(tapeCatalogService.find(any()))
-            .thenReturn(Arrays.asList(appropriateTape));
+            .thenReturn(List.of(appropriateTape));
         when(tapeDriveService.getTapeDriveConf().getIndex())
             .thenReturn(DRIVE_INDEX);
         when(tapeRobotPool.checkoutRobotService())
@@ -367,9 +363,8 @@ public class ReadTaskTest {
             .setCurrentLocation(new TapeLocation(DRIVE_INDEX, TapeLocationType.DRIVE))
             .setPreviousLocation(new TapeLocation(SLOT_INDEX + 1, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -422,9 +417,8 @@ public class ReadTaskTest {
             .setCurrentLocation(new TapeLocation(DRIVE_INDEX, TapeLocationType.DRIVE))
             .setPreviousLocation(new TapeLocation(SLOT_INDEX + 1, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -479,9 +473,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(null, TapeLocationType.OUTSIDE));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -524,7 +517,7 @@ public class ReadTaskTest {
 
     @Test
     public void testReadTaskWhenCurrentTapeIsNotNullAndNotEligibleThenErrorWhenLoadingTheEligibleTape()
-        throws InterruptedException, QueueException {
+        throws Exception {
         // When
         when(tapeDriveService.getTapeDriveConf()).thenAnswer(o -> mock(TapeDriveConf.class));
         TapeCatalog currentTape = new TapeCatalog()
@@ -538,9 +531,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(SLOT_INDEX, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -584,7 +576,7 @@ public class ReadTaskTest {
 
     @Test
     public void testReadTaskWhenCurrentTapeIsNotNullAndNotEligibleThenErrorWhenUnloadingTheCurrentTape()
-        throws InterruptedException, QueueException {
+        throws Exception {
         // When
         when(tapeDriveService.getTapeDriveConf()).thenAnswer(o -> mock(TapeDriveConf.class));
         TapeCatalog currentTape = new TapeCatalog()
@@ -598,9 +590,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(SLOT_INDEX, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -628,7 +619,7 @@ public class ReadTaskTest {
         when(tapeRobotPool.checkoutRobotService().getLoadUnloadService()
             .unloadTape(anyInt(), anyInt())).thenReturn(new TapeResponse(StatusCode.FATAL));
         TapeDriveState tapeDriveState = new TapeDriveState(StatusCode.OK);
-        tapeDriveState.setDriveStatuses(Arrays.asList(TapeDriveStatus.ONLINE));
+        tapeDriveState.setDriveStatuses(List.of(TapeDriveStatus.ONLINE));
         when(tapeDriveCommandService.status())
             .thenReturn(tapeDriveState);
         when(tapeRobotPool.checkoutRobotService().getLoadUnloadService()
@@ -645,8 +636,7 @@ public class ReadTaskTest {
 
 
     @Test
-    public void testReadTaskWhenCurrentTapeIsNotEligibleAndLoadEligibleTapeThenErrorWhenReadIt()
-        throws InterruptedException, QueueException {
+    public void testReadTaskWhenCurrentTapeIsNotEligibleAndLoadEligibleTapeThenErrorWhenReadIt() throws Exception {
         // When
         when(tapeDriveService.getTapeDriveConf()).thenAnswer(o -> mock(TapeDriveConf.class));
         TapeCatalog currentTape = new TapeCatalog()
@@ -660,9 +650,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(SLOT_INDEX, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, currentTape, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -705,7 +694,7 @@ public class ReadTaskTest {
 
 
     @Test
-    public void testReadTaskCurrentTapeIsNullAndEligibleTapeFound() throws QueueException, InterruptedException {
+    public void testReadTaskCurrentTapeIsNullAndEligibleTapeFound() throws Exception {
         // When
         when(tapeDriveService.getTapeDriveConf()).thenAnswer(o -> mock(TapeDriveConf.class));
         TapeCatalog tapeCatalog = new TapeCatalog()
@@ -713,9 +702,8 @@ public class ReadTaskTest {
             .setCode(FAKE_TAPE_CODE)
             .setCurrentLocation(new TapeLocation(SLOT_INDEX, TapeLocationType.SLOT));
 
-        ReadOrder readOrder = new ReadOrder().setTapeCode(FAKE_TAPE_CODE)
-            .setFilePosition(FILE_POSITION)
-            .setFileName(fileName);
+        ReadOrder readOrder = new ReadOrder(FAKE_TAPE_CODE, FILE_POSITION, fileName, FAKE_BUCKET, FAKE_FILE_BUCKET_ID,
+            FILE_SIZE);
 
         ReadTask readTask =
             new ReadTask(readOrder, null, new TapeLibraryServiceImpl(tapeDriveService, tapeRobotPool),
@@ -723,7 +711,7 @@ public class ReadTaskTest {
 
         doAnswer(
             invocationOnMock -> {
-                fileTest = Files.createFile(Paths.get(outputDirectory + File.separator + fileName + ReadTask.TEMP_EXT));
+                fileTest = Files.createFile(outputDir.toPath().resolve(fileName + ReadTask.TEMP_EXT));
                 return new TapeResponse(StatusCode.OK);
             }
         ).when(tapeReadWriteService).readFromTape(any());
